force-app/main/default/objects/OrderItem/fields/InitCount__c.field-meta.xml
<CustomField>
    <fullName>InitCount__c</fullName>
    <label>初期数</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>