force-app/main/default/objects/OrderItem/fields/OptionOvertimeRate__c.field-meta.xml
<CustomField>
    <fullName>OptionOvertimeRate__c</fullName>
    <label>オプション超過単価</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>