force-app/main/default/objects/OrderItem/fields/OptionUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>OptionUnitPrice__c</fullName>
    <label>オプション単価</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>