force-app/main/default/objects/OrderItem/fields/OvertimeRate__c.field-meta.xml
<CustomField>
    <fullName>OvertimeRate__c</fullName>
    <label>超過単価</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>