force-app/main/default/objects/OrderItem/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <label>ソート順</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>